# dope-godot-cpp

./: install.py
src/: CMakeLists.txt  godot-cppConfig.cmake.in
